[package]
name = "FlaSSH"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ssh2 = "0.9"
termion = "4.0.6"
libc = "0.2"
tokio = { version = "1", features = ["full"] }
colored = "2.1"
rand = "0.8"